01_EKS/cloudformation/eksctl-sb1-nodegroup-standard-workers.json
{
    "Outputs": {
        "InstanceRoleARN": {
            "Value": {
                "Fn::GetAtt": "NodeInstanceRole.Arn"
            },
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}::InstanceRoleARN"
                }
            }
        },
        "InstanceProfileARN": {
            "Value": {
                "Fn::GetAtt": "NodeInstanceProfile.Arn"
            },
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}::InstanceProfileARN"
                }
            }
        },
        "FeatureSharedSecurityGroup": {
            "Value": true
        },
        "FeaturePrivateNetworking": {
            "Value": false
        },
        "FeatureLocalSecurityGroup": {
            "Value": true
        }
    },
    "Resources": {
        "SG": {
            "Properties": {
                "VpcId": {
                    "Fn::ImportValue": "eksctl-sb1-cluster::VPC"
                },
                "Tags": [
                    {
                        "Value": "owned",
                        "Key": "kubernetes.io/cluster/sb1"
                    },
                    {
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}/SG"
                        },
                        "Key": "Name"
                    }
                ],
                "GroupDescription": "Communication between the control plane and worker nodes in group standard-workers"
            },
            "Type": "AWS::EC2::SecurityGroup"
        },
        "NodeInstanceRole": {
            "Properties": {
                "Path": "/",
                "ManagedPolicyArns": [
                    "arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy",
                    "arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy",
                    "arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
                ],
                "AssumeRolePolicyDocument": {
                    "Version": "2012-10-17",
                    "Statement": [
                        {
                            "Principal": {
                                "Service": [
                                    "ec2.amazonaws.com"
                                ]
                            },
                            "Effect": "Allow",
                            "Action": [
                                "sts:AssumeRole"
                            ]
                        }
                    ]
                }
            },
            "Type": "AWS::IAM::Role"
        },
        "NodeInstanceProfile": {
            "Properties": {
                "Roles": [
                    {
                        "Ref": "NodeInstanceRole"
                    }
                ],
                "Path": "/"
            },
            "Type": "AWS::IAM::InstanceProfile"
        },
        "NodeGroupLaunchTemplate": {
            "Properties": {
                "LaunchTemplateName": {
                    "Fn::Sub": "${AWS::StackName}"
                },
                "LaunchTemplateData": {
                    "UserData": "H4sIAAAAAAAA/6w6/XPiuJK/56/QZade7dSMAdtACO9xdQZMQgKEr3zu7aWELIyCLRlZ5iNzc3/7lWxDjMXuy756s1WbUqu71d9qt/gFeSxyNMTonLhnAURL6OKwDmjkeWc8osh36mca0EBxDXnRI7NiTFAMESeBCIsB5hqhoYAU4eKMMREKDoMC9IxCuDjbcCLw65x4OJRcEKMCU1EH/3sGAAC/ALwMkfC0MMCIzAkC4S4U2HeAw1mgEQoiSgSYMw6W0Qx7WHyPF5YP3xkFPUKjLTDAr1bP+HoWc/xtgvmaIPx7yr/HEPSAjwV0oIAggBz6WGAe1sHYvureDb4D63Hy2rY71n1v+prAYlqbrgln1MdUdIiHG0UsUDERt7jnV8B0nR505bEZ9ACkDggFFAQdndXq3U+m9vi1PZh8B4O7tv3as5p2b7+YWt3BdPJPj01tkDk1UY8yqp04NGb [...]
                    "NetworkInterfaces": [
                        {
                            "Groups": [
                                {
                                    "Fn::ImportValue": "eksctl-sb1-cluster::SharedNodeSecurityGroup"
                                },
                                {
                                    "Ref": "SG"
                                }
                            ],
                            "DeviceIndex": 0,
                            "AssociatePublicIpAddress": true
                        }
                    ],
                    "InstanceType": "t3.medium",
                    "ImageId": "ami-09b6f282fa8a688fe",
                    "IamInstanceProfile": {
                        "Arn": {
                            "Fn::GetAtt": "NodeInstanceProfile.Arn"
                        }
                    }
                }
            },
            "Type": "AWS::EC2::LaunchTemplate"
        },
        "NodeGroup": {
            "UpdatePolicy": {
                "AutoScalingRollingUpdate": {
                    "MinInstancesInService": "0",
                    "MaxBatchSize": "1"
                }
            },
            "Properties": {
                "VPCZoneIdentifier": {
                    "Fn::Split": [
                        ",",
                        {
                            "Fn::ImportValue": "eksctl-sb1-cluster::SubnetsPublic"
                        }
                    ]
                },
                "Tags": [
                    {
                        "Value": "sb1-standard-workers-Node",
                        "PropagateAtLaunch": "true",
                        "Key": "Name"
                    },
                    {
                        "Value": "owned",
                        "PropagateAtLaunch": "true",
                        "Key": "kubernetes.io/cluster/sb1"
                    }
                ],
                "MinSize": "1",
                "MaxSize": "4",
                "LaunchTemplate": {
                    "Version": {
                        "Fn::GetAtt": "NodeGroupLaunchTemplate.LatestVersionNumber"
                    },
                    "LaunchTemplateName": {
                        "Fn::Sub": "${AWS::StackName}"
                    }
                },
                "DesiredCapacity": "3"
            },
            "Type": "AWS::AutoScaling::AutoScalingGroup"
        },
        "IngressInterClusterCP": {
            "Properties": {
                "ToPort": 443,
                "SourceSecurityGroupId": {
                    "Ref": "SG"
                },
                "IpProtocol": "tcp",
                "GroupId": {
                    "Fn::ImportValue": "eksctl-sb1-cluster::SecurityGroup"
                },
                "FromPort": 443,
                "Description": "Allow control plane to receive API requests from worker nodes in group standard-workers"
            },
            "Type": "AWS::EC2::SecurityGroupIngress"
        },
        "IngressInterClusterAPI": {
            "Properties": {
                "ToPort": 443,
                "SourceSecurityGroupId": {
                    "Fn::ImportValue": "eksctl-sb1-cluster::SecurityGroup"
                },
                "IpProtocol": "tcp",
                "GroupId": {
                    "Ref": "SG"
                },
                "FromPort": 443,
                "Description": "Allow worker nodes in group standard-workers to communicate with control plane (workloads using HTTPS port, commonly used with extension API servers)"
            },
            "Type": "AWS::EC2::SecurityGroupIngress"
        },
        "IngressInterCluster": {
            "Properties": {
                "ToPort": 65535,
                "SourceSecurityGroupId": {
                    "Fn::ImportValue": "eksctl-sb1-cluster::SecurityGroup"
                },
                "IpProtocol": "tcp",
                "GroupId": {
                    "Ref": "SG"
                },
                "FromPort": 1025,
                "Description": "Allow worker nodes in group standard-workers to communicate with control plane (kubelet and workload TCP ports)"
            },
            "Type": "AWS::EC2::SecurityGroupIngress"
        },
        "EgressInterClusterAPI": {
            "Properties": {
                "ToPort": 443,
                "IpProtocol": "tcp",
                "GroupId": {
                    "Fn::ImportValue": "eksctl-sb1-cluster::SecurityGroup"
                },
                "FromPort": 443,
                "DestinationSecurityGroupId": {
                    "Ref": "SG"
                },
                "Description": "Allow control plane to communicate with worker nodes in group standard-workers (workloads using HTTPS port, commonly used with extension API servers)"
            },
            "Type": "AWS::EC2::SecurityGroupEgress"
        },
        "EgressInterCluster": {
            "Properties": {
                "ToPort": 65535,
                "IpProtocol": "tcp",
                "GroupId": {
                    "Fn::ImportValue": "eksctl-sb1-cluster::SecurityGroup"
                },
                "FromPort": 1025,
                "DestinationSecurityGroupId": {
                    "Ref": "SG"
                },
                "Description": "Allow control plane to communicate with worker nodes in group standard-workers (kubelet and workload TCP ports)"
            },
            "Type": "AWS::EC2::SecurityGroupEgress"
        }
    },
    "Description": "EKS nodes (AMI family: AmazonLinux2, SSH access: false, private networking: false) [created and managed by eksctl]",
    "AWSTemplateFormatVersion": "2010-09-09"
}
